--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,19 +2,17 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main # Change this if your default branch is not "main"
-
-  workflow_dispatch: # Allows you to manually trigger the workflow
+    branches: [main]
+  workflow_dispatch:
 
 permissions:
-  pages: write # Grants access to write to the Pages API
-  id-token: write # Grants access to generate ID tokens for deployment
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       # Step 1: Checkout the repository
       - name: Checkout Repository
@@ -32,8 +30,18 @@ jobs:
           npm install
           npm run build
 
-      # Step 4: Deploy to GitHub Pages
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+      - name: Upload static files as artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          build_dir: dist/
+          path: ./dist/
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
